# sqlmorpher

./: .gitignore  .venv  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
sqlmorpher/: __init__.py  config_loader.py  connection_string.py  db.py  joins.py  migration.py
tests/: test_config_loader.py  test_connection_strings.py  test_db.py  test_joins.py  test_migration.py
